# vbwd-plugin-subscription

./: .gitignore  CHANGELOG.md  README.md  __init__.py  admin-config.json  config.json  populate_db.py  pyproject.toml
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md  EXTENDING.md  LLM_GUIDE.md
migrations/versions/: 20260523_1000_sub_baseline.py  20260531_subscription_prefix.py  20260608_sub_admin_idx.py  20260610_sub_bot_draft.py  20260611_sub_plan_display_mode.py  20260611_sub_plan_tax.py  20260613_sub_drop_price_id.py  20260613_sub_price_float.py  20260617_sub_link_tarif_plan_id_index.py  20260625_sub_payment_method.py  20260701_sub_plan_vendor_id.py
subscription/: cache_keys.py  cli.py  constants.py  demo_seed.py  events.py  marketplace_listings.py  scheduler.py  search_provider.py
subscription/handlers/: access_level_handler.py  cancel_handler.py  checkout_handler.py  group_sync_handler.py  line_item_handler.py  permission_sync_handler.py  recurring_billing_subscriber.py  subscription_handlers.py
subscription/models/: __init__.py  addon.py  addon_subscription.py  bot_checkout_draft.py  subscription.py  tarif_plan.py  tarif_plan_category.py
subscription/repositories/: addon_repository.py  addon_subscription_repository.py  bot_checkout_draft_repository.py  subscription_repository.py  tarif_plan_category_repository.py  tarif_plan_repository.py
subscription/routes/: __init__.py  admin_addons.py  admin_categories.py  admin_plans.py  admin_subscriptions.py  admin_user_addons.py  public_checkout_draft.py  public_config.py  user_addons.py  user_checkout.py  user_plans.py  user_subscriptions.py  vendor_plans.py
subscription/services/: addon_service.py  bot_storefront_commands.py  bot_storefront_service.py  catalog_read_model.py  (+16 more)
tests/: conftest.py
(+93 files in other folders)
